--- a/index.css
+++ b/index.css
@@ -4,19 +4,18 @@ body{
 }
 
 nav{
-    transition: background-color 0.4s ease-in-out;
+    transition: background-color 0.8s ease-in-out;
 }
 
+header{
+    background: linear-gradient(90deg, #FC466B 0%, #3F5EFB 100%);
+}
 
 .nav-scrolled{
-    background-color: #FC466B;
-    transition: background-color 0.4s ease-in-out;
+    background: #FC466B;
+    transition: background-color 0.8s ease-in-out;
 }
-.gradient-color{
-    display: block;
-    background: linear-gradient(90deg, #FC466B 0%, #3F5EFB 100%);
-    height: 100vh;
-}
+
 
 nav span #leopard-brand{
     width: 10vh;
@@ -59,7 +58,9 @@ nav .navbar-links ul li a:hover{
 }
 
 .intro{
-    margin-top: 10%;
+    padding-top: 10%;
+    height: 100vh;
+    background: linear-gradient(90deg, #FC466B 0%, #3F5EFB 100%);
 }
 
 
@@ -97,4 +98,22 @@ nav .navbar-links ul li a:hover{
 @keyframes down-arrow {
     0%{color: white;  bottom: 0;}
     100% {color: #f9ef9c; bottom: 1vmin;}
+}
+
+#about-section .subtitle{
+    font-size: 8vmin;
+    color: white;
+}
+
+#about-section{
+    margin:0%;
+    padding: 5%;
+    background-color:#be82d6;
+}
+
+#about-section #introducing-text{
+    border: 2px solid rgb(228, 207, 228);
+    padding: 3%;
+    font-weight: 420;
+    text-justify: inter-word;
 }
